[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
noise = "0.8.2"
futures-lite = "1.13.0"
bevy_asset = "0.12.0"
bevy_flycam = "0.12.0"
rand = "0.8.5"
bevy-inspector-egui = "0.21"
splines = "4.3.0"

# { version = "0.11.0", features = ["dynamic_linking"] }
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
